[package]
name = "rgl"
version.workspace = true
edition.workspace = true

[profile.dev.package.'*']
opt-level = 3

[profile.dev]
opt-level = 1

[workspace]
members = ["crates/*"]

[workspace.dependencies]
bevy = { version = "0.12" }
bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }
derive_more = { version = "0.99" }
rgl-input = { path = "crates/rgl-input" }
rgl-ui = { path = "crates/rgl-ui" }

[workspace.package]
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bevy_pixel_camera = "0.12.1"
rgl-input.workspace = true
rgl-ui.workspace = true
